# itk_event_aggregator

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  psql-client.yaml  pyproject.toml
.github/workflows/: deploy.yml  lint.yml
alembic/: env.py
alembic/versions/: 2648be1f75f2_create_tables.py  2c098ed82832_add_unique_constraint_to_place_name.py  c62f15790944_add_sync_metadata_table.py  e8ac9e966191_add_tickets_table.py
app/: main.py  setting.py
app/api/v1/: event.py  tickets.py
app/cache/: seat_cache.py
app/clients/: events.py
app/core/: config.py  setting.py
app/db/: base.py  session.py
app/dependencies/: dependencies.py
app/exceptions/: event.py  place.py  ticket.py
app/models/: __init__.py  enums.py  event.py  place.py  sync_metadata.py  ticket.py
app/repositories/: event.py  place.py  ticket.py
app/schemas/: event.py  place.py  ticket.py
app/schemas/clients/: events.py
app/services/: event.py  place.py  ticket.py
